# MusicPoster

./: .cache  .gitignore  EXAMPLES.md  README.md  album.py  app.py  changes.txt  codec.py  examples.md  generate_examples.py  helper.py  keys.env  keys.env.example  local.py  pyproject.toml  req.txt  requirements.txt  sync_drive_posters.py  test.py  utlity.py
.claude/: settings.local.json
src/: album.py  auto.py  codec.py  fill.py  helper.py  infinity.py  lyrics.py  surprise.py  test.py
static/: about.css  auto.js  index.css  poster.css
static/css/: about.css  autocomplete.css  choose_style.css  colorpicker.css  download-modal.css  index.css  loading.css  mosaic.css  poster-edit-additions.css  poster.css  top_albums.css
static/js/: auto.js  autocomplete.js  colorpicker.js  cover-picker.js  download-modal.js  edit-text.js  eyedropper.js  loading.js  mosaic.js  poster-state.js  random.js  scroll.js  spinner.js  submit.js  update.js
static/posters/: README.md  get_drive.py  log.txt  random_js_update.py  resize.py
static/user_submissions/: purpose.md
templates/: index.html
templates/about/: about.html
templates/home/: index.html  top_albums.html  welcome.html
templates/poster/: choose_style.html  index.html  mosaic.html  result.html
utility_scripts/: convert_to_jpeg.py  generate_examples.py  scan_posters.py  sync_drive_posters.py
